added products and show page

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "susie-art",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://localhost:3002",
   "dependencies": {
     "@react-firebase/auth": "^0.2.10",
     "@react-firebase/database": "^0.3.11",
@@ -10,11 +11,13 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "connected-react-router": "^6.8.0",
+    "emailjs-com": "^2.6.4",
     "firebase": "^8.2.1",
     "jquery": "^3.5.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
