--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "connected-react-router": "^6.8.0",
     "emailjs-com": "^2.6.4",
     "firebase": "^8.2.1",
+    "html-react-parser": "^1.1.1",
     "jquery": "^3.5.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
@@ -25,6 +26,7 @@
     "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.11",
     "react-router-dom": "^5.2.0",
