--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "emailjs-com": "^2.6.4",
     "firebase": "^8.2.1",
     "html-react-parser": "^1.1.1",
+    "javascript-time-ago": "^2.3.4",
     "jquery": "^3.5.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
@@ -34,6 +35,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
