--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-react-parser": "^1.1.1",
     "javascript-time-ago": "^2.3.4",
     "jquery": "^3.5.1",
+    "node-localstorage": "^2.1.6",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
