--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.20",
     "bootstrap": "^4.5.3",
+    "browser-image-compression": "^1.0.14",
     "connected-react-router": "^6.8.0",
     "emailjs-com": "^2.6.4",
     "firebase": "^8.2.1",
