--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.11",
